--- a/solutions/communication_kafka/index.asciidoc
+++ b/solutions/communication_kafka/index.asciidoc
@@ -1,3 +1,5 @@
+= Implementing Kafka with Spring Boot and Spring Kafka Module
+
 :toc:
 
 == Abstract
@@ -8,7 +10,7 @@ messaging solutions are implemented with Spring Boot. Furthermore, the
 documentation also provides information regarding the implementation of
 logging, tracing, and retry within an application.
 
-Spring Kafka, Docker, and Postman are the tools being used during the
+Spring Kafka, Docker, and Postman are some of the tools used during the
 creation of this document. To run both Kafka message broker and
 Zookeeper, Docker image is used. For the app testing, we use Postman by
 sending already defined http requests to examine the expected outputs.
@@ -36,7 +38,7 @@ specific topics. This way Kafka can be used as a distributed pub/sub
 messaging system that replaces traditional message brokers like ActiveMQ
 and RabbitMQ.
 
-This soulution concentrates on the following aspects:
+This solution concentrates on the following aspects:
 
 * Configuration
 * Basic functionalities and Retry
@@ -65,14 +67,14 @@ following functionalities in a spring boot application:
 
 The tools that are set and implemented are as follow:
 
-* Spring Boot An extension of the popular Spring frameworks, but it has
+* Spring Boot: An extension of the popular Spring frameworks, but it has
 a few unique features that make it ideal for quickly developing web
 applications and microservices.
-* Spring Kafka Extends the simple and common Spring template programming
+* Spring Kafka: Extends the simple and common Spring template programming
 model with a KafkaTemplate as well as Message-driven POJOs via
 @KafkaListener annotation.
 * Java / Kotlin
-* Spring Cloud Sleuth Provides Spring Boot auto-configuration for
+* Spring Cloud Sleuth: Provides Spring Boot auto-configuration for
 distributed tracing (_read more:
 https://spring.io/projects/spring-cloud-sleuth[https://spring.io/projects/spring-cloud-sleuth]_).
 
@@ -190,7 +192,7 @@ public void listenBookings(Booking booking){
 }
 ....
 
-In this example messages of the type Booking are consumed from the
+In this example, messages of the type Booking are consumed from the
 `bookings` topic.
 
 === Retry
